# reddit-cli

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py
src/creddit/: config.py  terminal.py
